WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216790
AudioParam.exponentialRampToValueAtTime() does not properly deal with negative values
https://bugs.webkit.org/show_bug.cgi?id=216790
Summary
AudioParam.exponentialRampToValueAtTime() does not properly deal with negativ...
Chris Dumez
Reported
2020-09-21 10:54:45 PDT
AudioParam.exponentialRampToValueAtTime() does not properly deal with negative values. The specification [1] says: "If V0 and V1 have opposite signs or if V0 is zero, then v(t) = V0 for T0 <= t < T1." Our implementation did not match the specification and would just special-case if either V0 or V1 was negative. [1]
https://www.w3.org/TR/webaudio/#dom-audioparam-exponentialramptovalueattime
Attachments
Patch
(6.39 KB, patch)
2020-09-21 10:59 PDT
,
Chris Dumez
eric.carlson
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-21 10:59:13 PDT
Created
attachment 409284
[details]
Patch
Chris Dumez
Comment 2
2020-09-21 14:17:52 PDT
Committed
r267367
: <
https://trac.webkit.org/changeset/267367
>
Radar WebKit Bug Importer
Comment 3
2020-09-21 14:18:20 PDT
<
rdar://problem/69327008
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug